feat: add logic to optimize points usage